# animelist

./: .gitignore  Cargo.toml  build.rs
assets/: resources.xml  style.css
src/: lib.rs  main.rs
src/api/: jikan.rs  mod.rs
src/models/: character.rs
src/storage/: favorites.rs
src/ui/: character_widget.rs  content.rs  dialogs.rs  handlers.rs  headerbar.rs  mod.rs  window.rs
src/ui/components/: mod.rs  signal_connector.rs  window_builder.rs
src/ui/pages/: explore_page.rs  favorites_page.rs  mod.rs
src/ui/utils/: error_display.rs
src/utils/: api_handler.rs  mod.rs
