[package]
name = "waifu-viewer"
version = "0.1.0"
edition = "2024"

[dependencies]
libadwaita = "0.6"
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
async-channel = "2.3.1"
libc = "0.2"
nix = { version = "0.27", features = ["user"] }