[package]
name = "waifu-viewer"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
libadwaita = "0.6"
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
async-channel = "2.3.1"
libc = "0.2"
nix = { version = "0.27", features = ["user"] }
dirs = "5.0"
glib = "0.19"
gio = "0.19"

[build-dependencies]
glib-build-tools = "0.19"
